# codex

./: .bazelrc  AGENTS.md  MODULE.bazel  package.json  resolve_cargo.py  test.md
codex-rs/analytics/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  reducer.rs
codex-rs/ansi-escape/: Cargo.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/: Cargo.toml
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server-protocol/: Cargo.toml  fix.py  fix2.py
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  ServerNotification.json  codex_app_server_protocol.schemas.json  codex_app_server_protocol.v2.schemas.json
codex-rs/app-server-protocol/schema/typescript/: ClientRequest.ts  LoopLifecycleItem.ts  LoopLifecycleKind.ts  LoopLifecycleStatus.ts  Prompt.ts  PromptArgument.ts  ServerNotification.ts  WebSearchEngine.ts  WebSearchToolConfig.ts  index.ts
codex-rs/app-server-protocol/src/protocol/: common.rs  event_mapping.rs  thread_history.rs  v2.rs
codex-rs/app-server-test-client/: Cargo.toml
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  dynamic_tools.rs  in_process.rs  lib.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  request_processors.rs  transport_tests.rs
codex-rs/app-server/src/codex_message_processor/: config_runtime.rs
codex-rs/app-server/src/message_processor/: tracing_tests.rs
codex-rs/app-server/src/request_processors/: mcp_processor.rs  thread_goal_processor.rs  thread_processor.rs  thread_processor_tests.rs  turn_processor.rs
codex-rs/app-server/tests/common/: Cargo.toml  rollout.rs
codex-rs/app-server/tests/suite/: conversation_summary.rs
codex-rs/apply-patch/: Cargo.toml
codex-rs/apply-patch/src/: lib.rs  parser.rs  seek_sequence.rs
codex-rs/arg0/: Cargo.toml
codex-rs/async-utils/: Cargo.toml
codex-rs/channels/: Cargo.toml
codex-rs/channels/src/: approval_manager.rs  channel_bots.rs  channel_dock.rs  discord_client.rs  kakao_client.rs  lib.rs  line_client.rs  slack_client.rs  telegram_client.rs  whatsapp_client.rs
codex-rs/chatgpt/: Cargo.toml
codex-rs/chatgpt/tests/suite/: apply_command_e2e.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: export.rs  get_session_context.patch  ilhae.rs  main.rs
codex-rs/cloud-requirements/: Cargo.toml
codex-rs/cloud-tasks/: Cargo.toml
codex-rs/code-mode/: Cargo.toml
codex-rs/codex-api/: Cargo.toml
codex-rs/codex-api/src/: api_bridge.rs  api_bridge_tests.rs
codex-rs/codex-api/src/sse/: responses.rs
codex-rs/codex-client/: Cargo.toml
codex-rs/codex-client/src/: retry.rs
codex-rs/config/: Cargo.toml
codex-rs/config/src/: config_toml.rs  profile_toml.rs  types.rs
codex-rs/config/src/loader/: layer_io.rs
codex-rs/connectors/: Cargo.toml
codex-rs/core/: Cargo.toml  config.schema.json  fix_compilation.py  gpt_5_codex_prompt.md
codex-rs/core-skills/: Cargo.toml
codex-rs/core-skills/src/: loader.rs  model.rs
codex-rs/core/src/: client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  codex.rs  codex_delegate.rs  codex_tests.rs  codex_thread.rs  compact_remote.rs  compact_remote_v2.rs  connectors_tests.rs  goals.rs  lib.rs  mcp_tool_call_tests.rs  mcp_tool_exposure.rs  mcp_tool_exposure_test.rs  model_provider_info.rs  prompt_debug.rs  session_startup_prewarm.rs  stream_events_utils.rs  stream_events_utils_tests.rs  thread_manager.rs  thread_manager_tests.rs  turn_timing.rs
codex-rs/core/src/agent/: control_tests.rs  role_tests.rs
codex-rs/core/src/codex/: context_updates.rs  history_bootstrap.rs  mention_preparation.rs  plan_mode_stream.rs  sampling_prep.rs  tool_router_build.rs  turn_opening.rs
codex-rs/core/src/config/: config_tests.rs  mcp_servers.rs  mod.rs  profile.rs  schema.rs
codex-rs/core/src/config_loader/: layer_io.rs  mod.rs
codex-rs/core/src/context/: apps_instructions.rs
codex-rs/core/src/context_manager/: history.rs  history_tests.rs
codex-rs/core/src/guardian/: metrics.rs  review_session.rs
codex-rs/core/src/mcp/: skill_dependencies_tests.rs
codex-rs/core/src/memories/: mod.rs  phase1.rs
codex-rs/core/src/models_manager/: model_info.rs  model_info_tests.rs
codex-rs/core/src/plugins/: manager.rs
codex-rs/core/src/session/: completion_hooks.rs  event_forwarding.rs  initial_context.rs  mcp.rs  mod.rs  pending_input_flow.rs  rollout_reconstruction.rs  session.rs  tests.rs  tool_registry_bootstrap.rs  tool_router_build.rs  turn.rs
codex-rs/core/src/skills/: loader.rs  model.rs
codex-rs/core/src/state/: service.rs  session.rs
codex-rs/core/src/tasks/: mod.rs
codex-rs/core/src/tools/: context.rs  context_tests.rs  hosted_spec.rs  hosted_spec_tests.rs  mod.rs  parallel.rs  registry.rs  registry_tests.rs  router.rs  router_tests.rs  spec.rs  spec_plan.rs  spec_plan_tests.rs  spec_tests.rs
codex-rs/core/src/tools/handlers/: lsp.rs  (+33 more)
codex-rs/core/src/unified_exec/: mod_tests.rs  process_manager.rs
codex-rs/core/src/utils/: mod.rs  safe_writer.rs
codex-rs/core/templates/model_instructions/: gpt-5.2-codex_instructions_template.md
codex-rs/core/tests/: responses_headers.rs
codex-rs/core/tests/common/: Cargo.toml  lib.rs  test_codex.rs
codex-rs/core/tests/suite/: abort_tasks.rs  agent_jobs.rs  approvals.rs  cli_stream.rs  client.rs  client_websockets.rs  code_mode.rs  compact_remote.rs  hooks.rs  request_permissions.rs  search_tool.rs  shell_serialization.rs  sqlite_state.rs  tools.rs  unified_exec.rs  user_shell_cmd.rs
codex-rs/debug-client/: Cargo.toml
codex-rs/exec/: Cargo.toml
codex-rs/exec-server/: Cargo.toml
codex-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_human_output_tests.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  lib_tests.rs
codex-rs/exec/tests/: event_processor_with_json_output.rs
codex-rs/execpolicy/: Cargo.toml
codex-rs/execpolicy-legacy/: Cargo.toml
codex-rs/features/: Cargo.toml
codex-rs/feedback/: Cargo.toml
codex-rs/file-search/: Cargo.toml
codex-rs/git-utils/: Cargo.toml
(+582 files in other folders)
