[package]
name = "codex-analytics"

[lib]
doctest = false
name = "codex_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.version]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-git-utils]
workspace = true

[dependencies.codex-login]
workspace = true

[dependencies.codex-plugin]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.sha1]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread",]

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.serde_json]
workspace = true
