[package]
name = "codex-ansi-escape"

[lib]
name = "codex_ansi_escape"
path = "src/lib.rs"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.ansi-to-tui]
workspace = true

[dependencies.ratatui]
workspace = true
features = [ "unstable-rendered-line-info", "unstable-widget-ref",]

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]
