[package]
name = "codex-app-server-client"

[lib]
name = "codex_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.codex-app-server]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-arg0]
workspace = true

[dependencies.codex-core]
workspace = true

[dependencies.codex-feedback]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1"

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "sync", "time", "rt",]

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dependencies.url]
version = "2"

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.serde_json]
workspace = true

[dev-dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread",]
