[package]
name = "codex-app-server-protocol"

[lib]
name = "codex_app_server_protocol"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-experimental-api-macros]
workspace = true

[dependencies.codex-git-utils]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.schemars]
version = "0.8.22"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.serde_with]
workspace = true

[dependencies.shlex]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.rmcp]
version = "0.15.0"
default-features = false
features = [ "base64", "macros", "schemars", "server",]

[dependencies.ts-rs]
workspace = true

[dependencies.inventory]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dependencies.uuid]
version = "1"
features = [ "serde", "v7",]

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.codex-utils-cargo-bin]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.similar]
workspace = true

[dev-dependencies.tempfile]
workspace = true
