[package]
name = "codex-app-server-test-client"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive", "env",]

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-core]
workspace = true

[dependencies.codex-otel]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-cli]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "rt",]

[dependencies.tracing]
version = "0.1.44"

[dependencies.tracing-subscriber]
version = "0.3.22"

[dependencies.tungstenite]
workspace = true

[dependencies.url]
version = "2"

[dependencies.uuid]
version = "1"
features = [ "v4",]
