[[bin]]
name = "codex-app-server"
path = "src/main.rs"

[[bin]]
name = "codex-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[package]
name = "codex-app-server"

[lib]
name = "codex_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.base64]
version = "0.22.1"

[dependencies.axum]
version = "0.8"
default-features = false
features = [ "http1", "json", "tokio", "ws",]

[dependencies.codex-arg0]
workspace = true

[dependencies.codex-cloud-requirements]
workspace = true

[dependencies.codex-core]
workspace = true

[dependencies.codex-exec-server]
workspace = true

[dependencies.codex-features]
workspace = true

[dependencies.codex-git-utils]
workspace = true

[dependencies.codex-otel]
workspace = true

[dependencies.codex-shell-command]
workspace = true

[dependencies.codex-utils-cli]
workspace = true

[dependencies.codex-utils-pty]
workspace = true

[dependencies.codex-backend-client]
workspace = true

[dependencies.codex-file-search]
workspace = true

[dependencies.codex-chatgpt]
workspace = true

[dependencies.codex-login]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-feedback]
workspace = true

[dependencies.codex-rmcp-client]
workspace = true

[dependencies.codex-sandboxing]
workspace = true

[dependencies.codex-state]
workspace = true

[dependencies.codex-tools]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-utils-json-to-toml]
workspace = true

[dependencies.chrono]
version = "0.4.43"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.constant_time_eq]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.hmac]
workspace = true

[dependencies.jsonwebtoken]
workspace = true

[dependencies.owo-colors]
workspace = true
features = [ "supports-colors",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.sha2]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.time]
workspace = true

[dependencies.toml]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "io-std", "macros", "process", "rt-multi-thread", "signal",]

[dependencies.tokio-util]
version = "0.7.18"

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = [ "env-filter", "fmt", "json",]

[dependencies.uuid]
version = "1"
features = [ "serde", "v7",]

[dev-dependencies.app_test_support]
workspace = true

[dev-dependencies.base64]
version = "0.22.1"

[dev-dependencies.axum]
version = "0.8"
default-features = false
features = [ "http1", "json", "tokio",]

[dev-dependencies.core_test_support]
workspace = true

[dev-dependencies.codex-utils-cargo-bin]
workspace = true

[dev-dependencies.opentelemetry]
workspace = true

[dev-dependencies.opentelemetry_sdk]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.reqwest]
workspace = true
features = [ "rustls-tls",]

[dev-dependencies.rmcp]
version = "0.15.0"
default-features = false
features = [ "elicitation", "server", "transport-streamable-http-server",]

[dev-dependencies.serial_test]
workspace = true

[dev-dependencies.tokio-tungstenite]
workspace = true

[dev-dependencies.tracing-opentelemetry]
workspace = true

[dev-dependencies.wiremock]
workspace = true

[dev-dependencies.shlex]
workspace = true
