[[bin]]
name = "apply_patch"
path = "src/main.rs"

[package]
name = "codex-apply-patch"

[lib]
name = "codex_apply_patch"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.similar]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tree-sitter]
workspace = true

[dependencies.tree-sitter-bash]
workspace = true

[dev-dependencies.assert_cmd]
workspace = true

[dev-dependencies.assert_matches]
workspace = true

[dev-dependencies.codex-utils-cargo-bin]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
