[package]
name = "codex-arg0"

[lib]
name = "codex_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.codex-apply-patch]
workspace = true

[dependencies.codex-linux-sandbox]
workspace = true

[dependencies.codex-sandboxing]
workspace = true

[dependencies.codex-shell-escalation]
workspace = true

[dependencies.codex-utils-home-dir]
workspace = true

[dependencies.dotenvy]
workspace = true

[dependencies.tempfile]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "rt-multi-thread",]
