[package]
name = "codex-async-utils"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "macros", "rt", "rt-multi-thread", "time",]

[dependencies.tokio-util]
version = "0.7.18"

[dev-dependencies.pretty_assertions]
workspace = true
