[package]
name = "codex-channels"
version = "0.1.0"
edition = "2024"
description = "Channel bot integrations for Ilhae — Telegram, Discord, Slack, KakaoTalk, Line, WhatsApp"

[lib]
name = "codex_channels"
path = "src/lib.rs"

[features]
default = ["telegram", "discord", "slack"]
telegram = ["dep:teloxide"]
discord = ["dep:serenity"]
slack = ["dep:slack-morphism"]

[dependencies]
# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization  
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# HTTP
reqwest = { version = "0.12", features = ["json"] }

# Channel-specific (feature-gated)
teloxide = { version = "0.13", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
slack-morphism = { version = "2.0", features = ["hyper"], optional = true }

# Channel architecture
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
enum_dispatch = "0.3"
inventory = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
codex-core = { version = "0.0.0", path = "../core" }
codex-protocol = { version = "0.0.0", path = "../protocol" }
codex-ilhae = { version = "0.1.0", path = "../ilhae" }
