[package]
name = "codex-chatgpt"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-connectors]
workspace = true

[dependencies.codex-core]
workspace = true

[dependencies.codex-login]
workspace = true

[dependencies.codex-utils-cli]
workspace = true

[dependencies.codex-utils-cargo-bin]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "full",]

[dependencies.codex-git-utils]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
