[package]
name = "codex-cloud-tasks"

[lib]
name = "codex_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.base64]
version = "0.22.1"

[dependencies.chrono]
version = "0.4.43"
features = [ "serde",]

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-cloud-tasks-client]
path = "../cloud-tasks-client"
features = [ "mock", "online",]

[dependencies.codex-client]
workspace = true

[dependencies.codex-core]
path = "../core"

[dependencies.codex-git-utils]
workspace = true

[dependencies.codex-login]
path = "../login"

[dependencies.codex-tui]
workspace = true

[dependencies.codex-utils-cli]
workspace = true

[dependencies.crossterm]
workspace = true
features = [ "event-stream",]

[dependencies.ratatui]
workspace = true

[dependencies.reqwest]
workspace = true
features = [ "json",]

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread",]

[dependencies.tokio-stream]
workspace = true

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = [ "env-filter",]

[dependencies.unicode-width]
workspace = true

[dependencies.owo-colors]
workspace = true
features = [ "supports-colors",]

[dependencies.supports-color]
workspace = true

[dependencies.async-trait]
workspace = true

[dev-dependencies.async-trait]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true
