[package]
name = "codex-code-mode"

[lib]
doctest = false
name = "codex_code_mode"
path = "src/lib.rs"

[lints]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.version]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "macros", "rt", "sync", "time",]

[dependencies.tokio-util]
version = "0.7.18"
features = [ "rt",]

[dependencies.tracing]
version = "0.1.44"

[dependencies.v8]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true
