[package]
name = "codex-api"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.bytes]
workspace = true

[dependencies.codex-client]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-rustls-provider]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.http]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tokio]
version = "1"
features = [ "macros", "net", "rt", "sync", "time",]

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.tungstenite]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dependencies.eventsource-stream]
workspace = true

[dependencies.regex-lite]
workspace = true

[dependencies.tokio-util]
version = "0.7.18"
features = [ "codec",]

[dependencies.url]
version = "2"

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.assert_matches]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tokio-test]
workspace = true

[dev-dependencies.wiremock]
workspace = true

[dev-dependencies.reqwest]
workspace = true
