[package]
name = "codex-config"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-execpolicy]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false
features = [ "alloc", "std",]

[dependencies.multimap]
workspace = true

[dependencies.schemars]
version = "0.8.22"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.serde_path_to_error]
workspace = true

[dependencies.sha2]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tokio]
version = "1"
features = [ "fs",]

[dependencies.toml]
workspace = true

[dependencies.toml_edit]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tokio]
version = "1"
features = [ "full",]
