[package]
name = "codex-connectors"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.urlencoding]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tokio]
version = "1"
features = [ "macros", "rt-multi-thread",]
