[package]
name = "codex-core-skills"

[lib]
doctest = false
name = "codex_core_skills"
path = "src/lib.rs"

[lints]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.version]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.codex-analytics]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-config]
workspace = true

[dependencies.codex-instructions]
workspace = true

[dependencies.codex-login]
workspace = true

[dependencies.codex-otel]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-skills]
workspace = true

[dependencies.codex-exec-server]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-utils-plugins]
workspace = true

[dependencies.dirs]
workspace = true

[dependencies.dunce]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.serde_yaml]
workspace = true

[dependencies.shlex]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "fs", "macros", "rt",]

[dependencies.toml]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dependencies.zip]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
