[package]
name = "codex-debug-client"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.serde]
version = "1"

[dependencies.serde_json]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true
