[[bin]]
name = "codex-exec-server"
path = "src/bin/codex-exec-server.rs"

[package]
name = "codex-exec-server"

[lib]
doctest = false

[lints]
workspace = true

[dev-dependencies]
test-case = "3.3.1"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.arc-swap]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.base64]
version = "0.22.1"

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-utils-pty]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tokio]
version = "1"
features = [ "fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time",]

[dependencies.tokio-tungstenite]
workspace = true

[dependencies.tracing]
version = "0.1.44"

[dev-dependencies.anyhow]
workspace = true

[dev-dependencies.codex-utils-cargo-bin]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
