[[bin]]
name = "codex-exec"
path = "src/main.rs"

[[test]]
name = "all"
path = "tests/all.rs"

[package]
name = "codex-exec"
autotests = false

[lib]
name = "codex_exec"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-arg0]
workspace = true

[dependencies.codex-app-server-client]
workspace = true

[dependencies.codex-app-server-protocol]
workspace = true

[dependencies.codex-cloud-requirements]
workspace = true

[dependencies.codex-core]
workspace = true

[dependencies.codex-feedback]
workspace = true

[dependencies.codex-git-utils]
workspace = true

[dependencies.codex-otel]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-utils-cli]
workspace = true

[dependencies.codex-utils-oss]
workspace = true

[dependencies.owo-colors]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.supports-color]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "io-std", "macros", "process", "rt-multi-thread", "signal",]

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]

[dependencies.tracing-subscriber]
version = "0.3.22"
features = [ "env-filter",]

[dependencies.ts-rs]
workspace = true
features = [ "uuid-impl", "serde-json-impl", "no-serde-warnings",]

[dependencies.uuid]
version = "1"

[dev-dependencies.assert_cmd]
workspace = true

[dev-dependencies.codex-apply-patch]
workspace = true

[dev-dependencies.codex-utils-cargo-bin]
workspace = true

[dev-dependencies.core_test_support]
workspace = true

[dev-dependencies.libc]
workspace = true

[dev-dependencies.opentelemetry]
workspace = true

[dev-dependencies.opentelemetry_sdk]
workspace = true

[dev-dependencies.predicates]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true

[dev-dependencies.tracing-opentelemetry]
workspace = true

[dev-dependencies.uuid]
version = "1"

[dev-dependencies.walkdir]
workspace = true

[dev-dependencies.wiremock]
workspace = true
