[[bin]]
name = "codex-execpolicy-legacy"
path = "src/main.rs"

[package]
name = "codex-execpolicy-legacy"
description = "Legacy exec policy engine for validating proposed exec calls."

[lib]
name = "codex_execpolicy_legacy"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.allocative]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.derive_more]
workspace = true
features = [ "display",]

[dependencies.env_logger]
workspace = true

[dependencies.log]
workspace = true

[dependencies.multimap]
workspace = true

[dependencies.path-absolutize]
workspace = true

[dependencies.regex-lite]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.serde_with]
workspace = true
features = [ "macros",]

[dependencies.starlark]
workspace = true

[dev-dependencies.tempfile]
workspace = true
