[[bin]]
name = "codex-execpolicy"
path = "src/main.rs"

[package]
name = "codex-execpolicy"
description = "Codex exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "codex_execpolicy"
path = "src/lib.rs"

[lints]
workspace = true

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.multimap]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.shlex]
workspace = true

[dependencies.starlark]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
