[package]
name = "codex-features"

[lib]
doctest = false
name = "codex_features"
path = "src/lib.rs"

[lints]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.version]
workspace = true

[dependencies.codex-login]
workspace = true

[dependencies.codex-otel]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.schemars]
version = "0.8.22"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.toml]
workspace = true

[dependencies.tracing]
version = "0.1.44"
features = [ "log",]

[dev-dependencies.pretty_assertions]
workspace = true
