[package]
name = "codex-feedback"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.sentry]
version = "0.46"

[dependencies.tracing]
version = "0.1.44"

[dependencies.tracing-subscriber]
version = "0.3.22"

[dev-dependencies.pretty_assertions]
workspace = true
