[[bin]]
name = "codex-file-search"
path = "src/main.rs"

[package]
name = "codex-file-search"

[lib]
name = "codex_file_search"
path = "src/lib.rs"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.clap]
version = "4"
features = [ "derive",]

[dependencies.crossbeam-channel]
workspace = true

[dependencies.ignore]
workspace = true

[dependencies.nucleo]
workspace = true

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.serde_json]
workspace = true

[dependencies.tokio]
version = "1"
features = [ "full",]

[dev-dependencies.pretty_assertions]
workspace = true

[dev-dependencies.tempfile]
workspace = true
