[package]
name = "codex-git-utils"
readme = "README.md"

[lints]
workspace = true

[dependencies]
regex = "1"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[dependencies.codex-utils-absolute-path]
workspace = true

[dependencies.codex-exec-server]
workspace = true

[dependencies.codex-protocol]
workspace = true

[dependencies.futures]
version = "0.3"
default-features = false
features = [ "alloc",]

[dependencies.once_cell]
workspace = true

[dependencies.schemars]
version = "0.8.22"

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.tempfile]
workspace = true

[dependencies.thiserror]
version = "2.0.17"

[dependencies.tokio]
version = "1"
features = [ "macros", "process", "rt", "time",]

[dependencies.ts-rs]
workspace = true
features = [ "uuid-impl", "serde-json-impl", "no-serde-warnings",]

[dependencies.walkdir]
workspace = true

[dev-dependencies.assert_matches]
workspace = true

[dev-dependencies.pretty_assertions]
workspace = true
